--- a/src/Components/Pages/Home/styles.css
+++ b/src/Components/Pages/Home/styles.css
@@ -19,6 +19,10 @@
   letter-spacing: 0.03em;
   margin-top: -20px;
 }
+.heading-1 {
+  margin-top: 3rem;
+  margin-bottom: -4rem;
+}
 .span-text {
   color: var(--textPrimary);
   font-size: 1.4rem;
@@ -34,8 +38,8 @@
   gap: 5px;
 }
 .q-class-home {
-  padding-top: 12px;
-  width: 6.5rem;
+  padding-top: 24.2px;
+  width: 5.6rem;
 }
 .para {
   font-size: 1.4rem;
@@ -45,6 +49,7 @@
   flex-direction: column;
   margin-left: auto;
   align-items: left;
+  width: 569px;
 }
 
 .gradient {
@@ -64,7 +69,7 @@
   justify-content: space-between;
   align-items: center;
   /* gap: 100px; */
-  width: 95%;
+  width: 93.5%;
 }
 .red-line {
   width: 8rem;
@@ -91,6 +96,9 @@
   color: black;
   transition: all 0.5s;
 }
+.homeImg {
+  margin-left: -150px;
+}
 
 /* @media (min-width: 1200px) and (max-width: 1599px) {
   .landing-wrapper {
@@ -114,7 +122,7 @@
     font-size: 6rem;
     padding-top: 22px;
   }
-  .iphone {
+  .homeImg {
     max-width: 300px;
   }
 
@@ -174,7 +182,7 @@
     max-width: 230px;
     top: 3rem;
   }
-  .iphone {
+  .homeImg {
     max-width: 280px;
   }
   .heading-1,
@@ -216,7 +224,7 @@
     margin-right: auto;
     margin-top: 4rem;
   }
-  .iphone {
+  .homeImg {
     left: auto;
     right: auto;
   }
@@ -251,7 +259,7 @@
   .heading-2 {
     font-size: 3rem;
   }
-  .iphone {
+  .homeImg {
     left: auto;
     right: auto;
     max-width: 300px;
