--- a/src/Components/Pages/Portfolio/styles/portfolio.css
+++ b/src/Components/Pages/Portfolio/styles/portfolio.css
@@ -16,8 +16,11 @@
   justify-content: space-between;
   padding: 2rem 9rem;
 }
-/* .banner-left {
-} */
+.banner-links {
+  display: flex;
+  flex-direction: row;
+}
+
 .banner-right {
   display: flex;
   flex-direction: column;
