--- a/src/Components/Pages/Portfolio/styles/portfolio.css
+++ b/src/Components/Pages/Portfolio/styles/portfolio.css
@@ -14,11 +14,12 @@
   display: flex;
   align-items: flex-start;
   justify-content: space-between;
-  padding: 2rem 9rem;
+  padding: 2rem 7.5rem;
 }
 .banner-links {
   display: flex;
   flex-direction: row;
+  gap: 10px;
 }
 
 .banner-right {
