Portfolio all pages done

--- a/src/Components/Pages/Portfolio/styles/socialMedia.css
+++ b/src/Components/Pages/Portfolio/styles/socialMedia.css
@@ -12,6 +12,7 @@
 .portfolio-sm-heading-flex {
   display: flex;
   align-items: center;
+  gap: 10px;
 }
 .socialmedia-heading-flex {
   display: flex;
