About us page base

--- a/src/Components/Pages/Portfolio/styles/portfolio.css
+++ b/src/Components/Pages/Portfolio/styles/portfolio.css
@@ -9,6 +9,7 @@
   width: 100%;
   min-height: 100vh;
   background-image: url("../../../../Assets/png/portfolioBanner1.png");
+  background-color: black;
   background-repeat: no-repeat;
   background-size: cover;
   display: flex;
