About Us changes and Home 2nd section q 480px fixes

--- a/src/Components/Pages/Home/Components/styles/howWeMarqet.css
+++ b/src/Components/Pages/Home/Components/styles/howWeMarqet.css
@@ -169,7 +169,7 @@
     flex-direction: column-reverse;
     align-items: center;
     justify-content: flex-start;
-    padding: 1.5rem 2rem;
+    padding: 0;
     gap: 20px;
   }
   .how-we-market-list {
@@ -179,6 +179,7 @@
     align-items: flex-start;
     margin: auto;
     width: fit-content;
+    margin-left: 1.5rem;
   }
   .landing-right-market {
     margin: 0px;
@@ -190,13 +191,14 @@
   }
   .landing-left-market {
     position: static;
-    width: 100%;
+    margin-right: auto;
   }
-  .q-class {
-    width: 4rem;
+  .q-class-market {
+    width: 3rem;
   }
   .para-market {
     font-size: 1rem;
     width: 22rem;
+    margin-top: -4rem;
   }
 }
