--- a/src/Components/App/styles.css
+++ b/src/Components/App/styles.css
@@ -83,7 +83,7 @@
   .mobile-drawer {
     width: 40vw;
     height: 100vh;
-    background-color: "white";
+    /* background-color: white; */
     padding: 1.5rem;
     display: flex;
     flex-direction: column;
