--- a/src/Components/Pages/Portfolio/styles/portfolio.css
+++ b/src/Components/Pages/Portfolio/styles/portfolio.css
@@ -3,13 +3,12 @@
   align-items: flex-start;
   justify-content: space-between;
   min-height: 90vh;
-  /* background-image: url("../../../../Assets/png/portfolioBanner1.png"); */
+  /* flex-direction: column; */
 }
 .banner {
   width: 100%;
   min-height: 100vh;
   background-image: url("../../../../Assets/png/portfolioBanner1.png");
-  background-color: black;
   background-repeat: no-repeat;
   background-size: cover;
   display: flex;
@@ -48,4 +47,42 @@
 .q-class-portfolio {
   width: 4.6rem;
   padding-top: 12px;
+}
+
+/* .blackTpBG {
+  position: absolute;
+  top: 0;
+  opacity: 0.6;
+  width: 100%;
+  background-color: rgba(0, 0, 0, 1);
+  z-index: 1;
+  min-height: 40vh;
+} */
+
+@media (max-width: 480px) {
+  .portfolio-wrapper {
+    flex-direction: column;
+    align-items: center;
+    justify-content: flex-start;
+    padding: 0rem 1.2rem;
+    gap: 20px;
+  }
+  .banner {
+    padding: 0rem 1.2rem;
+    background-size: 125vw;
+    min-height: 40vh;
+  }
+
+  .banner-right {
+    margin: 0px;
+    z-index: 20;
+  }
+  .heading-1-portfolio,
+  .heading-2-portfolio {
+    font-size: 2.5rem;
+  }
+  .q-class-portfolio {
+    width: 2.4rem;
+    padding-top: 6px;
+  }
 }
