--- a/src/Components/Pages/Home/styles.css
+++ b/src/Components/Pages/Home/styles.css
@@ -4,7 +4,7 @@
   justify-content: space-between;
   padding: 1.5rem 9rem;
   min-height: 90vh;
-  /* margin-bottom: 1.8rem; */
+  margin-bottom: 1.8rem;
   /* width: 100%; */
 }
 
